Merged uckelman-findbugs@4886. * Use Integer.valueOf(String) instead of Integer(String). * Use autoboxing instead of Integer(int), Character(char), Long(long). * Other minor cleanup.
git-svn-id: https://svn.code.sf.net/p/vassalengine/svn/VASSAL-src/trunk@4892 67b53d14-2c14-4ace-a08f-0dab2b34000c